# cosmic_code

./: .gitignore  alembic.ini  batch_solid_assessment.md  config.py  main.py  model.py  model_uml.puml  pyproject.toml  pytest.ini  refactor.md
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
api/: dependencies.py  schemas.py
cosmicpython/: env.py
cosmicpython/versions/: 8a268c078498_add_allocation_and_relationship_to_.py  bed6da89bc80_initial_state.py
db/: orm.py  session.py
docs/: REPOSITORY_PATTERN_ANALYSIS.md  VALUE_OBJECTS_ORM_TRADEOFF.md  architecture.md  batch_solid_assessment.md  bmm-workflow-status.yaml  data-models.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
domain/: case.py  entities.py  model.py  repositories.py  value_objects.py
repository/: __init__.py  repositories.py
service_layer/: services.py
tests/: DB_TESTS.md  conftest.py  test_allocate.py  test_allocate_overview.md  test_batches.py  test_orm.py  test_repository.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py
tests/unit/: test_allocate.py  test_services.py
