[project]
name = "cosmicpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.4",
    "mypy>=1.18.2",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.alembic]
script_location = "%(here)s/alembic"

#file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]